--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>TEDxYouth@JPIS</title>
-		<link rel="stylesheet" href="css/style.css">
-		<script src="js/jquery-3.3.1.js"></script>
-		<script src="js/jQuery.scrollSpeed.js"></script>
+		<link rel="stylesheet" href="Assets/css/style.css">
+		<script src="Assets/js/jquery-3.3.1.js"></script>
+		<script src="Assets/js/jQuery.scrollSpeed.js"></script>
 		<script>
 				$(function() {
 						jQuery.scrollSpeed(100, 1000);
@@ -20,7 +20,7 @@
 			<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/152724/CSS3DRenderer.js'></script>
 			<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/152724/TimelineMax.min.js'></script>
 			<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/152724/TweenMax.min.js'></script>
-			<script src="js/shatter.js"></script>
+			<script src="Assets/js/shatter.js"></script>
 		</div>
 		
 		<div class="hero-wrapper">
@@ -52,7 +52,7 @@
 						<div class="smalltext">Seconds</div>
 					</div>
 				</div>
-				<script src="js/timer.js"></script>
+				<script src="Assets/js/timer.js"></script>
 			</div>
 		</div>
 	</body>
