--- a/index.html
+++ b/index.html
@@ -13,11 +13,20 @@
 		</script>
 	</head>
 	<body>
+		<div id='ted_navbar'>
+		<ul>
+		<li class='active'><a href='#'><span>Shatter</span></a></li>
+		<li><a href='#'><span>About</span></a></li>
+		<li><a href='#'><span>Team</span></a></li>
+		<li class='last'><a href='#'><span>Speakers</span></a></li>
+		<li class='last'><a href='#'><span>Contact Us</span></a></li>
+		</ul>
+		</div>
 		<div>
 			<!-- Edit the JS and Canvas for changing the object -->
 			<canvas width="490" height="313" id="base-canvas"></canvas>
 			<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/152724/three.min.js'></script>
-			<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/152724/CSS3DRenderer.js'></script>
+			<script src='https://s3-us-west-2.atemazonaws.com/s.cdpn.io/152724/CSS3DRenderer.js'></script>
 			<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/152724/TimelineMax.min.js'></script>
 			<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/152724/TweenMax.min.js'></script>
 			<script src="Assets/js/shatter.js"></script>
@@ -27,6 +36,7 @@
 			<div class="hero-img-wrapper">
 				<!-- <img src="assets/images/TEDx1.png" alt="" class="hero-img"> -->
 			</div>
+
 			<div class="theme-header">
 				<h1 class="theme-header-h1">TEDxYouth@JPIS 2018</h1>
 			</div>
