--- a/Alt/index2.html
+++ b/Alt/index2.html
@@ -118,7 +118,7 @@ a{
       <!-- Text div starts -->
       <div class="hero">
         <h1 class="hero-text">SHATTER
-  <span class="typer" id="main" data-words="LIMITS,BOUNDARIES,EXPECTATIONS,THE GLASS CEILING" data-colors="black" data-delay="50" data-deleteDelay="500"></span>
+  <span class="typer" id="main" data-words="LIMITS,BOUNDARIES,EXPECTATIONS,THE GLASS CEILING" data-colors="white" data-delay="50" data-deleteDelay="500"></span>
   <span class="cursor" data-owner="main"></span>
 </h1>
 
