--- a/index.html
+++ b/index.html
@@ -3,40 +3,30 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>TEDxYouth@JPIS</title>
-		<link rel="stylesheet" href="Assets/css/style.css">
-		<script src="Assets/js/jquery-3.3.1.js"></script>
-		<script src="Assets/js/jQuery.scrollSpeed.js"></script>
+		<link rel="stylesheet" href="css/style.css">
+		<script src="js/jquery-3.3.1.js"></script>
+		<script src="js/jQuery.scrollSpeed.js"></script>
 		<script>
 				$(function() {
-						jQuery.scrollSpeed(850, 550);
+						jQuery.scrollSpeed(100, 1000, 100);
 				});
 		</script>
 	</head>
 	<body>
-		<div id='ted_navbar'>
-		<ul>
-		<li class='active'><a href='#'><span>Shatter</span></a></li>
-		<li><a href='#'><span>About</span></a></li>
-		<li><a href='#'><span>Team</span></a></li>
-		<li class='last'><a href='#'><span>Speakers</span></a></li>
-		<li class='last'><a href='#'><span>Contact Us</span></a></li>
-		</ul>
-		</div>
 		<div>
 			<!-- Edit the JS and Canvas for changing the object -->
 			<canvas width="490" height="313" id="base-canvas"></canvas>
 			<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/152724/three.min.js'></script>
-			<script src='https://s3-us-west-2.atemazonaws.com/s.cdpn.io/152724/CSS3DRenderer.js'></script>
+			<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/152724/CSS3DRenderer.js'></script>
 			<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/152724/TimelineMax.min.js'></script>
 			<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/152724/TweenMax.min.js'></script>
-			<script src="Assets/js/shatter.js"></script>
+			<script src="js/shatter.js"></script>
 		</div>
-
+		
 		<div class="hero-wrapper">
 			<div class="hero-img-wrapper">
 				<!-- <img src="assets/images/TEDx1.png" alt="" class="hero-img"> -->
 			</div>
-
 			<div class="theme-header">
 				<h1 class="theme-header-h1">TEDxYouth@JPIS 2018</h1>
 			</div>
@@ -62,7 +52,7 @@
 						<div class="smalltext">Seconds</div>
 					</div>
 				</div>
-				<script src="Assets/js/timer.js"></script>
+				<script src="js/timer.js"></script>
 			</div>
 		</div>
 	</body>
