--- a/index.html
+++ b/index.html
@@ -1,38 +1,33 @@
-<!DOCTYPE html>
 <html lang="en">
+
 	<head>
 		<meta charset="UTF-8">
+		<meta name="description" content="Official website for TEDxYouth@JPIS 2018">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<title>TEDxYouth@JPIS</title>
-		<link rel="stylesheet" href="css/style.css">
-		<script src="js/jquery-3.3.1.js"></script>
-		<script src="js/jQuery.scrollSpeed.js"></script>
-		<script>
-				$(function() {
-						jQuery.scrollSpeed(100, 1000, 100);
-				});
-		</script>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+		<link rel="stylesheet" href="assets/css/style.css">
+		<link rel="icon" href="assets/favicon.png" type="image/png">
+		<script src="assets/js/jquery-3.3.1.js"></script>
+		<script src="assets/js/jQuery.scrollSpeed.js"></script>
 	</head>
+
 	<body>
-		<div>
-			<!-- Edit the JS and Canvas for changing the object -->
-			<canvas width="490" height="313" id="base-canvas"></canvas>
-			<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/152724/three.min.js'></script>
-			<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/152724/CSS3DRenderer.js'></script>
-			<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/152724/TimelineMax.min.js'></script>
-			<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/152724/TweenMax.min.js'></script>
-			<script src="js/shatter.js"></script>
-		</div>
-		
-		<div class="hero-wrapper">
-			<div class="hero-img-wrapper">
-				<!-- <img src="assets/images/TEDx1.png" alt="" class="hero-img"> -->
+		<!-- Main Div -->
+		<div id="particles-js">
+			<!-- Navbar starts -->
+			<!-- Navbar ends -->
+			<!-- Text div starts -->
+			<div class="hero">
+				<h1 class="hero-text">
+					SHATTER
+				  <span class="typer" id="main" data-words="LIMITS,BOUNDARIES,EXPECTATIONS,THE GLASS CEILING" data-colors="white" data-delay="50" data-deleteDelay="1000"></span>
+				  <span class="cursor" data-owner="main"></span>
+				</h1>
 			</div>
-			<div class="theme-header">
-				<h1 class="theme-header-h1">TEDxYouth@JPIS 2018</h1>
-			</div>
-			<div class="tagline">
-				<h3 class="tagline-h3">This <span class="tagline-h3" style="font-weight: bold;">December 14th</span>, Shatter.</h3>
-			</div>
+			<!-- Timer -->
 			<div id="timer">
 				<div id="clockdiv">
 					<div>
@@ -52,8 +47,17 @@
 						<div class="smalltext">Seconds</div>
 					</div>
 				</div>
-				<script src="js/timer.js"></script>
+				<script src="assets/js/timer.js"></script>
 			</div>
 		</div>
+		<!-- Scripts -->
+		<script src="assets/js/typer.js"></script>
+		<script type="text/javascript" src="assets/js/particles.js"></script>
+		<script type="text/javascript" src="assets/js/app.js"></script>
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 	</body>
+
 </html>
