Centre aligned timer

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div class="hero">
 				<h1 class="hero-text">
 					SHATTER
-				  <span class="typer" id="main" data-words="LIMITS,BOUNDARIES,EXPECTATIONS,THE GLASS CEILING" data-colors="white" data-delay="50" data-deleteDelay="1000"></span>
+				  <span class="typer" id="main" data-words="LIMITS,MISCONCEPTIONS,EXPECTATIONS,THE GLASS CEILING" data-colors="white" data-delay="50" data-deleteDelay="1000"></span>
 				  <span class="cursor" data-owner="main"></span>
 				</h1>
 			</div>
