--- a/index.html
+++ b/index.html
@@ -11,13 +11,38 @@
 		<link rel="stylesheet" href="assets/css/style.css">
 		<link rel="icon" href="assets/favicon.png" type="image/png">
 		<script src="assets/js/jquery-3.3.1.js"></script>
-		<script src="assets/js/jQuery.scrollSpeed.js"></script>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
+		<scriptsrc="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+		 <link href="https://fonts.googleapis.com/css?family=Karla|Montserrat" rel="stylesheet">
 	</head>
 
 	<body>
 		<!-- Main Div -->
 		<div id="particles-js">
 			<!-- Navbar starts -->
+			<nav class="navbar navbar-expand-xl" id="navbar" align="center">
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" id="toggler">
+					<img src="" style="width:20px;height:30px; align-content: center;border:none;" alt="Insert Image">
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav pt-2 pb-2 justify-content-center">
+						<li class="nav-item mt-0 navContent">
+							<a href="index.html" style="color: white;">Shatter</a>
+						</li>
+						<li class="nav-item mt-0 navContent">
+								<a href="#" style="color: white;">Speakers</a>
+						</li>
+						<li class="nav-item mt-0 navContent">
+							<a href="#"style="color: white;">Team</a>
+						</li>
+						<li class="nav-item mt-0 navContent">
+							<a href="#"style="color: white;">Contact</a>
+						</li>
+					</ul>
+				</div>
+			</nav>
 			<!-- Navbar ends -->
 			<!-- Text div starts -->
 			<div class="hero">
