--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
 							<a href="#"style="color: white;">Team</a>
 						</li>
 						<li class="nav-item mt-0 navContent">
-							<a href="#"style="color: white;">Contact</a>
+							<a href="#"style="color: white;">Volunteers</a>
+						</li>
+						<li class="nav-item mt-0 navContent">
+							<a href="#"style="color: white;">Past Speakers</a>
 						</li>
 					</ul>
 				</div>
