--- a/team.html
+++ b/team.html
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
 <html lang="en">
 
 	<head>
 		<meta charset="UTF-8">
 		<meta name="description" content="Official website for TEDxYouth@JPIS 2018">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<title>TEDxYouth@JPIS</title>
+		<title>Team | TEDxYouth@JPIS</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
@@ -15,14 +16,13 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-		 <link href="https://fonts.googleapis.com/css?family=Karla|Montserrat" rel="stylesheet">
-		 <script src="assets/js/images.js"></script>
+		<link href="https://fonts.googleapis.com/css?family=Karla|Montserrat" rel="stylesheet">
+		<script src="assets/js/images.js"></script>
 	</head>
 
-	<body>
-		<!-- Main Div -->
-		<div id="particles-js">
+	<body style="background-color: #212121;">
 			<!-- Navbar starts -->
+      <div>
 			<nav class="navbar navbar-expand-xl" id="navbar" align="center">
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" id="toggler">
 					<img src="" style="width:20px;height:30px; align-content: center;border:none;" alt="Insert Image">
@@ -47,46 +47,30 @@
 					</ul>
 				</div>
 			</nav>
+    </div>
 			<!-- Navbar ends -->
-			<!-- Text div starts -->
-			<div class="hero">
-				<h1 class="hero-text">
-					SHATTER
-				  <span class="typer" id="main" data-words="LIMITS,MISCONCEPTIONS,EXPECTATIONS,THE GLASS CEILING" data-colors="white" data-delay="50" data-deleteDelay="1000"></span>
-				  <span class="cursor" data-owner="main"></span>
-				</h1>
-			</div>
-			<!-- Timer -->
-			<div id="timer">
-				<div id="clockdiv">
-					<div>
-						<span class="days"></span>
-						<div class="smalltext">Days</div>
-					</div>
-					<div>
-						<span class="hours"></span>
-						<div class="smalltext">Hours</div>
-					</div>
-					<div>
-						<span class="minutes"></span>
-						<div class="smalltext">Minutes</div>
-					</div>
-					<div>
-						<span class="seconds"></span>
-						<div class="smalltext">Seconds</div>
-					</div>
-				</div>
-				<script src="assets/js/timer.js"></script>
-			</div>
-		</div>
-		<!-- Scripts -->
-		<script src="assets/js/typer.js"></script>
-		<script type="text/javascript" src="assets/js/particles.js"></script>
-		<script type="text/javascript" src="assets/js/app.js"></script>
-		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <!-- team grid starts here -->
+  <div class="images">
+    <figure class="snip1566">
+      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample14.jpg" alt="sq-sample14" />
+      <figcaption style="color: white;"><i style="color: white;">Eesha- </br>Curator</i></figcaption>
+      <a href="#"></a>
+    </figure>
+    <figure class="snip1566" ><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample17.jpg" alt="sq-sample17" />
+      <figcaption><i style="color: white;">Parth- </br>Curator</i></figcaption>
+      <a href="#"></a>
+    </figure>
+    <figure class="snip1566"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample19.jpg" alt="sq-sample19" />
+      <figcaption><i style="color: white;">Mohammad- </br>Tech Head</i></figcaption>
+      <a href="#"></a>
+    </figure>
+    <figure class="snip1566"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample20.jpg" alt="sq-sample20" />
+      <figcaption><i style="color: white;">Kush- </br>Tech Head</i></figcaption>
+      <a href="#"></a>
+    </figure>
+      <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+  </div>
 
-	</body>
-
+    <!-- Team grid ends -->
+  </body>
 </html>
