--- a/team.html
+++ b/team.html
@@ -23,7 +23,7 @@
 	<body style="background-color: #212121;">
 			<!-- Navbar starts -->
       <div>
-			<nav class="navbar navbar-expand-xl" id="navbar" align="center">
+			<nav class="navbar navbar-expand-xl" id="navbar2" align="center">
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" id="toggler">
 					<img src="" style="width:20px;height:30px; align-content: center;border:none;" alt="Insert Image">
 				</button>
@@ -62,6 +62,22 @@
     </figure>
     <figure class="snip1566"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample19.jpg" alt="sq-sample19" />
       <figcaption><i style="color: white;">Mohammad- </br>Tech Head</i></figcaption>
+      <a href="#"></a>
+    </figure>
+    <figure class="snip1566"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample20.jpg" alt="sq-sample20" />
+      <figcaption><i style="color: white;">Kush- </br>Tech Head</i></figcaption>
+      <a href="#"></a>
+    </figure>
+    <figure class="snip1566"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample14.jpg" alt="sq-sample20" />
+      <figcaption><i style="color: white;">Kush- </br>Tech Head</i></figcaption>
+      <a href="#"></a>
+    </figure>
+    <figure class="snip1566"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample20.jpg" alt="sq-sample20" />
+      <figcaption><i style="color: white;">Kush- </br>Tech Head</i></figcaption>
+      <a href="#"></a>
+    </figure>
+    <figure class="snip1566"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample14.jpg" alt="sq-sample20" />
+      <figcaption><i style="color: white;">Kush- </br>Tech Head</i></figcaption>
       <a href="#"></a>
     </figure>
     <figure class="snip1566"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample20.jpg" alt="sq-sample20" />
