--- a/alt.html
+++ b/alt.html
@@ -51,7 +51,7 @@
     <div id="particles-js">
 
       <nav class="navbar navbar-collapse-xsm ted-nav navbar-dark">
-  				 <a class="navbar-brand head" href="newIndex.html"><img src="Assets/logo.png" class="logo"></a>
+  				 <a class="navbar-brand head" href="newIndex.html"><img src="logo.png" class="logo"></a>
   				 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       			 <span class="navbar-toggler-icon"></span>
 
