--- a/alt.html
+++ b/alt.html
@@ -7,7 +7,6 @@
 		<title>TEDxYouth@JPIS</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 		<link rel="stylesheet" href="assets/css/style.css">
 		<link rel="icon" href="assets/favicon.png" type="image/png">
 		<script src="assets/js/jquery-3.3.1.js"></script>
@@ -60,31 +59,24 @@
 
       				<ul class="navbar-nav mr-auto">
       					<li class="nav-item ">
-          					<a class="nav-link mt-2 ml-2 mb-2" href="#">about</a>
+          					<a class="nav-link mt-2 ml-2 mb-2" href="#">About</a>
         					</li>
         					<li class="nav-item ">
-          					<a class="nav-link mt-2 ml-2 mb-2" href="#">team</a>
+          					<a class="nav-link mt-2 ml-2 mb-2" href="#">Team</a>
         					</li>
         					<li class="nav-item ">
-          					<a class="nav-link mt-2 ml-2 mb-2" href="#">speakers</a>
+          					<a class="nav-link mt-2 ml-2 mb-2" href="#">Past Speakers</a>
         					</li>
         					<li class="nav-item">
-          					<a class="nav-link mt-2 ml-2 mb-2" href="#">contact us</a>
+          					<a class="nav-link mt-2 ml-2 mb-2" href="#">Contact Us</a>
         					</li>
-
-        					<li class="nav-item">
-  				        <a class="nav-link  mt-2 ml-2 mb-2" href="#" >
-  				          events
-  				        </a>
-
-  				      </li>
       				</ul>
       			</div>
   			</nav>
       <div class="hero">
         <h1 class="hero-text">
           SHATTER
-          <span class="typer" id="main" data-words="LIMITS,MISCONCEPTIONS,STEREOTYPES,EXPECTATIONS,THE GLASS CEILING" data-colors="white" data-delay="105" data-deleteDelay="1000"></span>
+          <span class="typer" id="main" data-words="LIMITS,MISCONCEPTIONS,STEREOTYPES,EXPECTATIONS,THE GLASS CEILING" data-colors="white" data-delay="85" data-deleteDelay="500"></span>
         </h1>
       </div>
       <div id="timer">
