--- a/index.html
+++ b/index.html
@@ -14,43 +14,12 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 		 <script src="assets/js/images.js"></script>
-     <style>
-     body{
-       overflow:hidden;
-     }
-     /* Responsiveness */
-     @media only screen and (max-width:600px) and (min-width:400px){
-       .hero-text{
-         font-size: 25px;
-         text-align: center!important;
-       }.logo{
-         width: 250px!important;
-       }.head{
-         margin-left: -10!important;
-       }
-     }
-     @media only screen and (max-width:399px){
-       .logo{
-         width: 200px;
-       }
-     }
-     .logo{
-       width: 500px;
-     }
-     .nav-link{
-       text-transform: uppercase;
-     }
-     .collapse .navbar-collapse{
-       background: transparent;
-     }
-    </style>
 	</head>
 
 	<body>
-    <div id="particles-js">
 
-      <nav class="navbar navbar-collapse-xsm ted-nav navbar-dark">
-  				 <a class="navbar-brand head" href="about.html"><img src="logo.png" class="logo"></a>
+      <nav class="navbar navbar-expand-lg ted-nav navbar-dark">
+  				 <!-- <a class="navbar-brand head" href="about.html"><img src="logo.png" class="logo"></a> -->
   				 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       			 <span class="navbar-toggler-icon"></span>
 
@@ -73,6 +42,7 @@
       				</ul>
       			</div>
   			</nav>
+			<div id="particles-js">
       <div class="hero">
         <h1 class="hero-text">
           SHATTER
