Fixed Home Page ClockDiv

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 		<link rel="stylesheet" href="assets/css/style.css">
-		<link rel="icon" href="assets/favicon.png" type="image/png">
 		<script src="assets/js/jquery-3.3.1.js"></script>
+		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
@@ -27,51 +27,56 @@
     				 <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
       				<ul class="navbar-nav mr-auto">
+								<li class="nav-item active">
+									<a class="nav-link mt-2 ml-3 mb-2" href="#">Home</a>
+								</li>
       					<li class="nav-item ">
-          					<a class="nav-link mt-2 ml-2 mb-2" href="about.html">About</a>
+          					<a class="nav-link mt-2 ml-3 mb-2" href="about.html">About</a>
         					</li>
         					<li class="nav-item ">
-          					<a class="nav-link mt-2 ml-2 mb-2" href="#">Team</a>
+          					<a class="nav-link mt-2 ml-3 mb-2" href="#">Team</a>
+        					</li>
+									<li class="nav-item ">
+          					<a class="nav-link mt-2 ml-3 mb-2" href="#">Event</a>
         					</li>
         					<li class="nav-item ">
-          					<a class="nav-link mt-2 ml-2 mb-2" href="#">Past Speakers</a>
+          					<a class="nav-link mt-2 ml-3 mb-2" href="#">Past Events</a>
         					</li>
-        					<li class="nav-item">
-          					<a class="nav-link mt-2 ml-2 mb-2" href="#">Contact Us</a>
+									<li class="nav-item">
+          					<a class="nav-link mt-2 ml-3 mb-2" href="#">Team</a>
         					</li>
       				</ul>
+
       			</div>
   			</nav>
 			<div id="particles-js">
       <div class="hero">
         <h1 class="hero-text">
           SHATTER
-          <span class="typer" id="main" data-words="LIMITS,MISCONCEPTIONS,STEREOTYPES,EXPECTATIONS,THE GLASS CEILING" data-colors="white" data-delay="85" data-deleteDelay="500"></span>
+          <span class="typer" id="main" data-words="LIMITS,MISCONCEPTIONS,STEREOTYPES,EXPECTATIONS" data-colors="white" data-delay="85" data-deleteDelay="500"></span>
         </h1>
       </div>
-      <div id="timer">
-        <div id="clockdiv">
+					<div id="clockdiv">
           <div>
             <span class="days"></span>
-            <div class="smalltext">Days</div>
+            <div class="smalltext d">Days</div>
           </div>
           <div>
             <span class="hours"></span>
-            <div class="smalltext">Hours</div>
+            <div class="smalltext h">Hours</div>
           </div>
           <div>
             <span class="minutes"></span>
-            <div class="smalltext">Minutes</div>
+            <div class="smalltext m">Minutes</div>
           </div>
           <div>
             <span class="seconds"></span>
-            <div class="smalltext">Seconds</div>
+            <div class="smalltext s">Seconds</div>
           </div>
         </div>
         <script src="assets/js/timer.js"></script>
-      </div>
-    </div>
-    </div>
+			</div>
+  	</div>
 
     <!-- Scripts -->
     <script src="assets/js/typer.js"></script>
