--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="hero">
         <h1 class="hero-text">
           SHATTER
-          <span class="typer" id="main" data-words="LIMITS,MISCONCEPTIONS,STEREOTYPES,EXPECTATIONS" data-colors="white" data-delay="85" data-deleteDelay="500"></span>
+          <span class="typer" id="main" data-words="LIMITS,STEREOTYPES,EXPECTATIONS,THE GLASS CEILING" data-colors="white" data-delay="85" data-deleteDelay="500"></span>
         </h1>
       </div>
 					<div id="clockdiv">
