--- a/team.html
+++ b/team.html
@@ -1,92 +1,82 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html>
 
-	<head>
-		<meta charset="UTF-8">
-		<meta name="description" content="Official website for TEDxYouth@JPIS 2018">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<title>Team | TEDxYouth@JPIS</title>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-		<link rel="stylesheet" href="assets/css/style.css">
-		<link rel="icon" href="assets/favicon.png" type="image/png">
-		<script src="assets/js/jquery-3.3.1.js"></script>
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
-		<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-		<link href="https://fonts.googleapis.com/css?family=Karla|Montserrat" rel="stylesheet">
-		<script src="assets/js/images.js"></script>
-	</head>
+<head>
+	<title>TEDxYouth@JPIS 2018 Team Page</title>
+	<link rel="stylesheet" href="assets/css/team.css" type="text/css">
+	<link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.css">
+</head>
 
-	<body style="background-color: #212121;">
-			<!-- Navbar starts -->
-      <div>
-			<nav class="navbar navbar-expand-xl" id="navbar2" align="center">
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" id="toggler">
-					<img src="" style="width:20px;height:30px; align-content: center;border:none;" alt="Insert Image">
-				</button>
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav pt-2 pb-2 justify-content-center">
-						<li class="nav-item mt-0 navContent">
-							<a href="index.html" style="color: white;">Shatter</a>
-						</li>
-						<li class="nav-item mt-0 navContent">
-								<a href="#" style="color: white;">Speakers</a>
-						</li>
-						<li class="nav-item mt-0 navContent">
-							<a href="team.html"style="color: white;">Team</a>
-						</li>
-						<li class="nav-item mt-0 navContent">
-							<a href="#"style="color: white;">Volunteers</a>
-						</li>
-						<li class="nav-item mt-0 navContent">
-							<a href="#"style="color: white;">Past Speakers</a>
-						</li>
-					</ul>
+<body id="override">
+
+	<section class="team-rows">
+		<div class="container" style="padding-top: 130px; margin-bottom:78px;">
+			<!-- ROW 1 -->
+			<div class="row">
+				<div class="team col col-md-6 col-lg-4 col-sm-12">
+					<div class="teamimg">
+						<img class="bottom" src="assets/images/placeholder.jpg">
+						<img class="top" src="assets/images/placeholder_shatter.jpg">
+					</div>
+					<span itemprop="performer" itemscope itemtype="http://schema.org/Person"><h4 itemprop="name"><h4>Name</h4></span>
+					<p class="center-align caps">Title</p>
+					<p class="center-justified">Bio</p>
 				</div>
-			</nav>
-    </div>
-			<!-- Navbar ends -->
-  <!-- team grid starts here -->
-  <div class="images">
-    <figure class="snip1566">
-      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample14.jpg" alt="sq-sample14" />
-      <figcaption style="color: white;"><i style="color: white;">Eesha- </br>Curator</i></figcaption>
-      <a href="#"></a>
-    </figure>
-    <figure class="snip1566" ><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample17.jpg" alt="sq-sample17" />
-      <figcaption><i style="color: white;">Parth- </br>Curator</i></figcaption>
-      <a href="#"></a>
-    </figure>
-    <figure class="snip1566"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample19.jpg" alt="sq-sample19" />
-      <figcaption><i style="color: white;">Mohammad- </br>Tech Head</i></figcaption>
-      <a href="#"></a>
-    </figure>
-    <figure class="snip1566"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample20.jpg" alt="sq-sample20" />
-      <figcaption><i style="color: white;">Kush- </br>Tech Head</i></figcaption>
-      <a href="#"></a>
-    </figure>
-    <figure class="snip1566"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample14.jpg" alt="sq-sample20" />
-      <figcaption><i style="color: white;">Kush- </br>Tech Head</i></figcaption>
-      <a href="#"></a>
-    </figure>
-    <figure class="snip1566"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample20.jpg" alt="sq-sample20" />
-      <figcaption><i style="color: white;">Kush- </br>Tech Head</i></figcaption>
-      <a href="#"></a>
-    </figure>
-    <figure class="snip1566"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample14.jpg" alt="sq-sample20" />
-      <figcaption><i style="color: white;">Kush- </br>Tech Head</i></figcaption>
-      <a href="#"></a>
-    </figure>
-    <figure class="snip1566"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample20.jpg" alt="sq-sample20" />
-      <figcaption><i style="color: white;">Kush- </br>Tech Head</i></figcaption>
-      <a href="#"></a>
-    </figure>
-      <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
-  </div>
+				<div class="team col col-md-6 col-lg-4 col-sm-12" style="padding-bottom: 55.6px;">
+					<div class="teamimg">
+						<img class="bottom" src="assets/images/placeholder.jpg">
+						<img class="top" src="assets/images/placeholder_shatter.jpg">
+					</div>
+					<h4>Name</h4>
+					<p class="center-align caps">Title</p>
+					<p class="center-justified">Bio</p>
+				</div>
+				<div class="team col col-md-6 col-lg-4 col-sm-12" style="padding-bottom: 78.4px;">					
+					<div class="teamimg">
+						<img class="bottom" src="assets/images/placeholder.jpg">
+						<img class="top" src="assets/images/placeholder_shatter.jpg">
+					</div>
+					<h4>Name</h4>
+					<p class="center-align caps">Title</p>
+					<p class="center-justified">Bio</p>
+				</div>
+			</div>
+			<!-- ROW 2 -->				
+			<div class="row">
+				<div class="team col col-md-6 col-lg-4 col-sm-12">
+					<div class="teamimg">
+						<img class="bottom" src="assets/images/placeholder.jpg">
+						<img class="top" src="assets/images/placeholder_shatter.jpg">
+					</div>
+					<span itemprop="performer" itemscope itemtype="http://schema.org/Person"><h4 itemprop="name"><h4>Name</h4></span>
+					<p class="center-align caps">Title</p>
+					<p class="center-justified">Bio</p>
+				</div>
+				<div class="team col col-md-6 col-lg-4 col-sm-12" style="padding-bottom: 55.6px;">
+					<div class="teamimg">
+						<img class="bottom" src="assets/images/placeholder.jpg">
+						<img class="top" src="assets/images/placeholder_shatter.jpg">
+					</div>
+					<h4>Name</h4>
+					<p class="center-align caps">Title</p>
+					<p class="center-justified">Bio</p>
+				</div>
+				<div class="team col col-md-6 col-lg-4 col-sm-12" style="padding-bottom: 78.4px;">					
+					<div class="teamimg">
+						<img class="bottom" src="assets/images/placeholder.jpg">
+						<img class="top" src="assets/images/placeholder_shatter.jpg">
+					</div>
+					<h4>Name</h4>
+					<p class="center-align caps">Title</p>
+					<p class="center-justified">Bio</p>
+				</div>
+			</div>
+	</section>
+	<!--Loading Scripts-->
+	<script type="text/javascript">
+		AOS.init();
+	</script>
 
-    <!-- Team grid ends -->
-  </body>
+</body>
+
 </html>
