--- a/team.html
+++ b/team.html
@@ -4,6 +4,8 @@
 <head>
 	<title>TEDxYouth@JPIS 2018 Team Page</title>
 	<link rel="stylesheet" href="assets/css/team.css" type="text/css">
+	<link rel="stylesheet" href="assets/css/style.css" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.css">
 </head>
 
