--- a/index.html
+++ b/index.html
@@ -38,15 +38,12 @@
         					<li class="nav-item ">
           					<a class="nav-link mt-2 ml-3 mb-2" href="#">Team</a>
         					</li>
-									<li class="nav-item ">
-          					<a class="nav-link mt-2 ml-3 mb-2" href="#">Event</a>
-        					</li>
         					<li class="nav-item ">
-          					<a class="nav-link mt-2 ml-3 mb-2" href="#">Past Events</a>
+          					<a class="nav-link mt-2 ml-3 mb-2" href="https://www.ted.com/tedx/events/24850">TEDxYouth@JPIS '17</a>
         					</li>
-									<li class="nav-item">
-          					<a class="nav-link mt-2 ml-3 mb-2" href="#">Team</a>
-        					</li>
+                  <li class="nav-item ">
+                    <a class="nav-link mt-2 ml-3 mb-2" href="https://www.ted.com/tedx/events/18938">TEDxYouth@JPIS '16</a>
+                  </li>
       				</ul>
 
       			</div>
