--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           					<a class="nav-link mt-2 ml-3 mb-2" href="about.html">About</a>
         					</li>
         					<li class="nav-item ">
-          					<a class="nav-link mt-2 ml-3 mb-2" href="#">Team</a>
+          					<a class="nav-link mt-2 ml-3 mb-2" href="team.html">Team</a>
         					</li>
         					<li class="nav-item ">
           					<a class="nav-link mt-2 ml-3 mb-2" href="https://www.ted.com/tedx/events/24850">TEDxYouth@JPIS '17</a>
