--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-		 <script src="assets/js/images.js"></script>
+		<script src="assets/js/images.js"></script>
 	</head>
 
 	<body>
 
       <nav class="navbar navbar-expand-lg ted-nav navbar-dark">
-  				 <!-- <a class="navbar-brand head" href="about.html"><img src="logo.png" class="logo"></a> -->
+  				 <a class="navbar-brand head" href="about.html"><img src="logo.png" class="logo"></a>
   				 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       			 <span class="navbar-toggler-icon"></span>
 
