--- a/team.html
+++ b/team.html
@@ -7,9 +7,47 @@
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+	<link rel="stylesheet" href="assets/css/style.css">
+	<script src="assets/js/jquery-3.3.1.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+	<script src="assets/js/images.js"></script>
 </head>
 
-<body id="override">
+<body id="override" style="background-color:black;">
+
+	<nav class="navbar navbar-expand-lg ted-nav navbar-dark">
+			 <a class="navbar-brand head" href="about.html"><img src="logo.png" class="logo"></a>
+			 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				 <span class="navbar-toggler-icon"></span>
+
+				</button>
+				 <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+					<ul class="navbar-nav mr-auto">
+						<li class="nav-item active">
+							<a class="nav-link mt-2 ml-3 mb-2" href="#">Home</a>
+						</li>
+						<li class="nav-item ">
+								<a class="nav-link mt-2 ml-3 mb-2" href="about.html">About</a>
+							</li>
+							<li class="nav-item ">
+								<a class="nav-link mt-2 ml-3 mb-2" href="team.html">Team</a>
+							</li>
+							<li class="nav-item ">
+								<a class="nav-link mt-2 ml-3 mb-2" href="https://www.ted.com/tedx/events/24850">TEDxYouth@JPIS '17</a>
+							</li>
+							<li class="nav-item ">
+								<a class="nav-link mt-2 ml-3 mb-2" href="https://www.ted.com/tedx/events/18938">TEDxYouth@JPIS '16</a>
+							</li>
+					</ul>
+
+				</div>
+		</nav>
 
 	<section class="team-rows">
 		<div class="container" style="padding-top: 130px; margin-bottom:78px;">
@@ -33,7 +71,7 @@
 					<p class="center-align caps">Title</p>
 					<p class="center-justified">Bio</p>
 				</div>
-				<div class="team col col-md-6 col-lg-4 col-sm-12" style="padding-bottom: 78.4px;">					
+				<div class="team col col-md-6 col-lg-4 col-sm-12" style="padding-bottom: 78.4px;">
 					<div class="teamimg">
 						<img class="bottom" src="assets/images/placeholder.jpg">
 						<img class="top" src="assets/images/placeholder_shatter.jpg">
@@ -43,7 +81,7 @@
 					<p class="center-justified">Bio</p>
 				</div>
 			</div>
-			<!-- ROW 2 -->				
+			<!-- ROW 2 -->
 			<div class="row">
 				<div class="team col col-md-6 col-lg-4 col-sm-12">
 					<div class="teamimg">
@@ -63,7 +101,7 @@
 					<p class="center-align caps">Title</p>
 					<p class="center-justified">Bio</p>
 				</div>
-				<div class="team col col-md-6 col-lg-4 col-sm-12" style="padding-bottom: 78.4px;">					
+				<div class="team col col-md-6 col-lg-4 col-sm-12" style="padding-bottom: 78.4px;">
 					<div class="teamimg">
 						<img class="bottom" src="assets/images/placeholder.jpg">
 						<img class="top" src="assets/images/placeholder_shatter.jpg">
