--- a/about.html
+++ b/about.html
@@ -17,23 +17,28 @@
 		<link href="https://fonts.googleapis.com/css?family=Karla|Montserrat" rel="stylesheet">
 		<script src="assets/js/images.js"></script>
 		<style>
-*{
-	overflow-y: scroll;
-}
-	canvas{
-			margin-top:-500px!important;
-			z-index: -1;
-		}.content{
+		canvas{
+			margin-top: -500px;
+			max-height:100%;
+		}
+		body{
+			background-color: black;
+			overflow-y: auto;
+		}
+.content{
 			text-align: center;
 			z-index: 10;
 
 		}.p-content{
 			color: white;
+			line-height: 40px;
 			text-align: left;
 			margin-top: 30px;
 			line-height: 10x;
 			text-transform: uppercase;
-			letter-spacing: 2px;
+			letter-spacing: 5px;
+		}.p-content::first-letter{
+			font-size: 25px;
 		}
 	.head-text{
 		color:white;
@@ -47,7 +52,7 @@
 	}.ted{
 		width: 50%;
 		background-color: black;
-		height: 50%;
+		height: auto;
 		border-left:10px solid #FF2B06;
 		border-right:5px solid #FF2B06;
 		border-bottom: 10px solid transparent;
@@ -56,8 +61,9 @@
 		padding: 35px;
 	}.tedx{
 		width: 50%;
+		background-color: black;
 		padding: 35px;
-		height: 50%;
+		height: auto;
 		border-left:5px solid #FF2B06;
 		border-right:10px solid #FF2B06;
 		border-bottom: 10px solid transparent;
@@ -66,13 +72,14 @@
 	}.content-head{
 		font-size: 30px;
 		font-weight: 700;
-		color: white;
+		color: #FF2B06;
+		letter-spacing: 5px;
 	}@media only screen and (max-width:600px){
 		.nested{
 			flex-direction: column;
 		}.ted,.tedx{
 			width: 100%;
-			height: 25.0%;
+			height: auto;
 			margin-top: 50px;
 			border-left:10px solid #FF2B06;
 			border-right:10px solid #FF2B06;
@@ -80,11 +87,17 @@
 			border-top: 10px solid transparent;
 			padding-top: 20px;
 			z-index: 10;
+		}.p-content{
+			line-height: 30px;
+		}canvas{
+			margin-top: -2000px;
+			max-height: 200%;
+		}*{
+			overflow-y: auto;
 		}
-	}span{
-		color: #FF2B06;
 	}
 		</style>
+
 
 	</head>
 
@@ -93,14 +106,11 @@
 		<nav class="navbar navbar-expand-lg ted-nav navbar-dark">
 				 <!-- <a class="navbar-brand head" href="about.html"><img src="logo.png" class="logo"></a> -->
 				 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-					 <img src="logo.png" id="logo2" style="width:250px;margin:0 auto;">
+					  <span class="navbar-toggler-icon"></span>
 					</button>
 					 <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
 						<ul class="navbar-nav mr-auto">
-							<li class="nav-item">
-								 <img src="logo.png" id="logo" class="mt-2 ml-3"style="width:250px;">
-							</li>
 							<li class="nav-item">
 								<a class="nav-link mt-2 ml-3 mb-2" href="index.html" id="mainItem">Home</a>
 							</li>
@@ -125,9 +135,9 @@
 			</nav>
 
 			<div class="content">
-					<h1 class="head-text">ABOUT
-						<span class="typer" data-words="US,TEDx,TED" data-colors="#FF2B06" data-delay="105" data-deleteDelay="500"></span>
-	        </h1></h1>
+					<h1 class="head-text">ABOUT US
+
+	        </h1>
 					<div class="content nested">
 						<div class="ted">
 							<h1 class="content-head">TED</h1>
@@ -149,7 +159,7 @@
 			<!-- Scripts -->
 			<script src="assets/js/typer.js"></script>
 	    <script type="text/javascript" src="assets/js/particles.js"></script>
-	    <script type="text/javascript" src="assets/js/app.js"></script>
+	    <script type="text/javascript" src="assets/js/app2.js"></script>
 	    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
