--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
 	<body id="particles-js">
 
 		<nav class="navbar navbar-expand-lg ted-nav navbar-dark">
-				 <!-- <a class="navbar-brand head" href="about.html"><img src="logo.png" class="logo"></a> -->
+				 <a class="navbar-brand head" href="about.html"><img src="logo.png" class="logo"></a>
 				 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					  <span class="navbar-toggler-icon"></span>
 					</button>
