--- a/about.html
+++ b/about.html
@@ -41,13 +41,10 @@
 									<a class="nav-link mt-2 ml-3 mb-2" href="team.html">Team</a>
 								</li>
 								<li class="nav-item ">
-									<a class="nav-link mt-2 ml-3 mb-2" href="#">Event</a>
+									<a class="nav-link mt-2 ml-3 mb-2" href="https://www.ted.com/tedx/events/24850">TEDxYouth@JPIS '17</a>
 								</li>
 								<li class="nav-item ">
-									<a class="nav-link mt-2 ml-3 mb-2" href="#">Past Events</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link mt-2 ml-3 mb-2" href="#">Team</a>
+									<a class="nav-link mt-2 ml-3 mb-2" href="https://www.ted.com/tedx/events/18938">TEDxYouth@JPIS '16</a>
 								</li>
 						</ul>
 					</div>
