--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<body>
 
       <nav class="navbar navbar-expand-lg ted-nav navbar-dark">
-  				 <a class="navbar-brand head" href="about.html"><img src="logo.png" class="logo"></a>
+  				 <a class="navbar-brand head" href="#"><img src="logo.png" class="logo"></a>
   				 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       			 <span class="navbar-toggler-icon"></span>
 
