Increase the size ;)

--- a/team.html
+++ b/team.html
@@ -30,7 +30,7 @@
 
 					<ul class="navbar-nav mr-auto">
 						<li class="nav-item">
-							<a class="nav-link mt-2 ml-3 mb-2" href="#">Home</a>
+							<a class="nav-link mt-2 ml-3 mb-2" href="index.html">Home</a>
 						</li>
 						<li class="nav-item ">
 								<a class="nav-link mt-2 ml-3 mb-2" href="about.html">About</a>
@@ -59,7 +59,7 @@
 						<img class="top" src="assets/images/placeholder_shatter.jpg">
 					</div>
 					<span itemprop="performer" itemscope itemtype="http://schema.org/Person"><h4 itemprop="name"><h4>Name</h4></span>
-					<p class="center-align caps">Title</p>
+					<p class="center-align">Title</p>
 					<p class="center-justified">Bio</p>
 				</div>
 				<div class="team col col-md-6 col-lg-4 col-sm-12" style="padding-bottom: 55.6px;">
