--- a/team.html
+++ b/team.html
@@ -55,8 +55,8 @@
 			<div class="row">
 				<div class="team col col-md-6 col-lg-4 col-sm-12">
 					<div class="teamimg">
-						<img class="bottom" src="Assets/images/placeholder.jpg">
-						<img class="top" src="Assets/images/placeholder_shatter.jpg">
+						<img class="bottom" src="Assets/images/parth_shatter.png">
+						<img class="top" src="Assets/images/parth.png">
 					</div>
 					<span itemprop="performer" itemscope itemtype="http://schema.org/Person"><h4 itemprop="name"><h4>Name</h4></span>
 					<p class="center-align">Title</p>
