--- a/team.html
+++ b/team.html
@@ -18,7 +18,7 @@
 	<script src="Assets/js/images.js"></script>
 </head>
 
-<body id="override" style="background-color:black;">
+<body id="override" style="background-color:black;overflow:scroll">
 
 	<nav class="navbar navbar-expand-lg ted-nav navbar-dark">
 			 <a class="navbar-brand head" href="about.html"><img src="logo.png" class="logo"></a>
