--- a/about.html
+++ b/about.html
@@ -17,7 +17,11 @@
 		<link href="https://fonts.googleapis.com/css?family=Karla|Montserrat" rel="stylesheet">
 		<script src="Assets/js/images.js"></script>
 		<link rel="stylesheet" href="Assets/css/about.css">
-
+		<style>
+		*{
+			overflow-y: scroll;
+		}
+	</style>
 	</head>
 
 	<body id="particles-js">
