scroll for xl screens

--- a/about.html
+++ b/about.html
@@ -17,10 +17,12 @@
 		<link href="https://fonts.googleapis.com/css?family=Karla|Montserrat" rel="stylesheet">
 		<script src="Assets/js/images.js"></script>
 		<link rel="stylesheet" href="Assets/css/about.css">
-		<style>
+			<style>
+	@media only (screen) and (max-width:1400px){
 		*{
 			overflow-y: scroll;
 		}
+	}
 	</style>
 	</head>
 
