--- a/team.html
+++ b/team.html
@@ -62,11 +62,9 @@
 					<p class="center-align">Title</p>
 					<p class="center-justified">Bio</p>
 					<div class="social-btns">
-						<a href="#" class="btn facebook"><i class="fa fa-facebook"></i></a>
-						<a href="#" class="btn google"><i class="fa fa-google"></i></a>
-						<a href="#" class="btn github"><i class="fa fa-github"></i></a>
-						<a href="#" class="btn twitter"><i class="fa fa-twitter"></i></a>
-						<a href="#" class="btn skype"><i class="fa fa-skype"></i></a>
+						<a href="#" class="btn envelope"><i class="fa fa-envelope"></i></a>
+							<a href="#" class="btn facebook"><i class="fa fa-facebook"></i></a>
+						<a href="#" class="btn linkedin-in"><i class="fa fa-linkedin-in"></i></a>
 					</div>
 				</div>
 				<div class="team col col-md-6 col-lg-4 col-sm-12" style="padding-bottom: 55.6px;">
