--- a/team_2.html
+++ b/team_2.html
@@ -54,106 +54,245 @@
 						</ul>
 					</div>
 			</nav>
+
       <div class="content">
 				<div class="member1" style="overflow-y: hidden">
-					<img class="memImg"src="Assets/images/parth.png">
+					<img class="memImg"src="Assets/images/eesha.jpg">
 					<div class="reveal">
-						<p class="reveal-text"> NAME </p>
-						<p class="reveal-sub">Designation</p>
+						<p class="reveal-text"> Eesha Agarwal </p>
+						<p class="reveal-sub">Licensee-Curator</p>
 						<hr class="reveal-hr">
 						<div class="social-btns">
-							<a href="#" class="btn facebook"><i class="fa fa-facebook"></i></a>
-							<a href="#" class="btn google"><i class="fa fa-google"></i></a>
-							<a href="#" class="btn github"><i class="fa fa-github 1"></i></a>
-						</div>
-					</div>
-					<div class="bio1">
-						<h1 class="bioHead"> NAME </h1>
-						<p class="bioBody"> LOREM IPSUM DOLOR SIT AMET....</p>
-						<div class="social-btns">
-							<a href="#" class="btn facebook"><i class="fa fa-facebook back1"></i></a>
-							<a href="#" class="btn google"><i class="fa fa-google"></i></a>
-							<a href="#" class="btn github"><i class="fa fa-github"></i></a>
+							<a href="https://www.facebook.com/eesha.agarwal.9?ref=br_rs" class="btn facebook"><i class="fa fa-facebook"></i></a>
+							<a href="mailto:eesha2301@gmail.com" class="btn google"><i class="fa fa-google"></i></a>
+							<a href="https://www.linkedin.com/in/eesha-agarwal-4a4ab1149?originalSubdomain=in" class="btn linkedin-in"><i class="fa fa-linkedin-in"></i></a>
 						</div>
 					</div>
 				</div>
-				<div class="member2">
-					<img class="memImg1"src="Assets/images/parth.png">
+				<div class="member2" style="overflow-y: hidden">
+					<img class="memImg1"src="Assets/images/parthm.jpg">
 					<div class="reveal1">
-						<p class="reveal-text"> NAME </p>
-						<p class="reveal-sub">Designation</p>
+						<p class="reveal-text"> Parth Maheshwari </p>
+						<p class="reveal-sub">Curator</p>
 						<hr class="reveal-hr">
 						<div class="social-btns">
-							<a href="#" class="btn facebook"><i class="fa fa-facebook"></i></a>
-							<a href="#" class="btn google"><i class="fa fa-google"></i></a>
-							<a href="#" class="btn github"><i class="fa fa-github 2"></i></a>
-						</div>
-					</div>
-					<div class="bio2">
-						<h1 class="bioHead"> NAME </h1>
-						<p class="bioBody"> description </p>
-						<div class="social-btns">
-							<a href="#" class="btn facebook"><i class="fa fa-facebook back2"></i></a>
-							<a href="#" class="btn google"><i class="fa fa-google"></i></a>
-							<a href="#" class="btn github"><i class="fa fa-github"></i></a>
+							<a href="https://www.facebook.com/parth.maheshwari.180" class="btn facebook"><i class="fa fa-facebook"></i></a>
+							<a href="mailto:maheshwariparth13@gmail.com" class="btn google"><i class="fa fa-google"></i></a>
+							<a href="https://www.linkedin.com/in/parth-maheshwari-3908b915b" class="btn linkedin-in"><i class="fa fa-linkedin-in"></i></a>
 						</div>
 					</div>
 				</div>
 				<div class="member3">
-        	<img class="memImg2"src="Assets/images/parth.png">
+        	<img class="memImg2"src="Assets/images/dhruv.jpg">
 					<div class="reveal">
-						<p class="reveal-text"> NAME </p>
-						<p class="reveal-sub">Designation</p>
+						<p class="reveal-text"> Dhruv Khandelwal </p>
+						<p class="reveal-sub">Host | Rule Maven</p>
 						<hr class="reveal-hr">
 						<div class="social-btns">
 							<a href="#" class="btn facebook"><i class="fa fa-facebook"></i></a>
 							<a href="#" class="btn google"><i class="fa fa-google"></i></a>
-							<a href="#" class="btn github"><i class="fa fa-github"></i></a>
-						</div>
-					</div>
-				</div>
-      </div>
-      <div class="content row2">
-				<div class="member4">
-					<img class="memImg3"src="Assets/images/parth.png">
-					<div class="reveal">
-						<p class="reveal-text"> NAME </p>
-						<p class="reveal-sub">Designation</p>
-						<hr class="reveal-hr">
-						<div class="social-btns">
-							<a href="#" class="btn facebook"><i class="fa fa-facebook"></i></a>
-							<a href="#" class="btn google"><i class="fa fa-google"></i></a>
-							<a href="#" class="btn github"><i class="fa fa-github"></i></a>
-						</div>
-					</div>
-				</div>
-				<div class="member5">
-					<img class="memImg4"src="Assets/images/parth.png">
-					<div class="reveal">
-						<p class="reveal-text"> NAME </p>
-						<p class="reveal-sub">Designation</p>
-						<hr class="reveal-hr">
-						<div class="social-btns">
-							<a href="#" class="btn facebook"><i class="fa fa-facebook"></i></a>
-							<a href="#" class="btn google"><i class="fa fa-google"></i></a>
-							<a href="#" class="btn github"></i></a>
-						</div>
-					</div>
-				</div>
-				<div class="member6">
-					<img class="memImg5"src="Assets/images/parth.png">
-					<div class="reveal">
-						<p class="reveal-text"> NAME </p>
-						<p class="reveal-sub">Designation</p>
-						<hr class="reveal-hr">
-						<div class="social-btns">
-							<a href="#" class="btn facebook"><i class="fa fa-facebook"></i></a>
-							<a href="#" class="btn google"><i class="fa fa-google"></i></a>
-							<a href="#" class="btn github"><i class="fa fa-github"></i></a>
+							<a href="#" class="btn linkedin-in"><i class="fa fa-linkedin-in"></i></a>
 						</div>
 					</div>
 				</div>
 			</div>
+
+			<div class="content row2">
+				<div class="member4">
+					<img class="memImg3"src="Assets/images/rehan.jpg">
+					<div class="reveal">
+						<p class="reveal-text"> Rehan Kapur </p>
+						<p class="reveal-sub">Host</p>
+						<hr class="reveal-hr">
+						<div class="social-btns">
+							<a href="#" class="btn facebook"><i class="fa fa-facebook"></i></a>
+							<a href="#" class="btn google"><i class="fa fa-google"></i></a>
+							<a href="#" class="btn linkedin-in"><i class="fa fa-linkedin-in"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="member5">
+					<img class="memImg4"src="Assets/images/aditi.jpg">
+					<div class="reveal">
+						<p class="reveal-text"> Aditi Gupta </p>
+						<p class="reveal-sub">Storyteller</p>
+						<hr class="reveal-hr">
+						<div class="social-btns">
+							<a href="#" class="btn facebook"><i class="fa fa-facebook"></i></a>
+							<a href="#" class="btn google"><i class="fa fa-google"></i></a>
+							<a href="#" class="btn linkedin-in"><i class="fa fa-linkedin-in"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="member6">
+					<img class="memImg5"src="Assets/images/isha.jpg">
+					<div class="reveal">
+						<p class="reveal-text"> Isha Sacheti </p>
+						<p class="reveal-sub">Storyteller</p>
+						<hr class="reveal-hr">
+						<div class="social-btns">
+							<a href="#" class="btn facebook"><i class="fa fa-facebook"></i></a>
+							<a href="#" class="btn google"><i class="fa fa-google"></i></a>
+							<a href="#" class="btn linkedin-in"><i class="fa fa-linkedin-in"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="content row3">
+				<div class="member7">
+					<img class="memImg3"src="Assets/images/nistha.jpg">
+					<div class="reveal">
+						<p class="reveal-text"> Nistha Nanda </p>
+						<p class="reveal-sub">Storyteller</p>
+						<hr class="reveal-hr">
+						<div class="social-btns">
+							<a href="#" class="btn facebook"><i class="fa fa-facebook"></i></a>
+							<a href="#" class="btn google"><i class="fa fa-google"></i></a>
+							<a href="#" class="btn linkedin-in"><i class="fa fa-linkedin-in"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="member8">
+					<img class="memImg4"src="Assets/images/kush.jpg">
+					<div class="reveal">
+						<p class="reveal-text"> Kush Pandey </p>
+						<p class="reveal-sub">Tech Head</p>
+						<hr class="reveal-hr">
+						<div class="social-btns">
+							<a href="#" class="btn facebook"><i class="fa fa-facebook"></i></a>
+							<a href="#" class="btn google"><i class="fa fa-google"></i></a>
+							<a href="#" class="btn linkedin-in"><i class="fa fa-linkedin-in"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="member9">
+					<img class="memImg5"src="Assets/images/mohammad.jpg">
+					<div class="reveal">
+						<p class="reveal-text"> Mohammad Darvish </p>
+						<p class="reveal-sub">Tech Head</p>
+						<hr class="reveal-hr">
+						<div class="social-btns">
+							<a href="#" class="btn facebook"><i class="fa fa-facebook"></i></a>
+							<a href="#" class="btn google"><i class="fa fa-google"></i></a>
+							<a href="#" class="btn linkedin-in"><i class="fa fa-linkedin-in"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="content row4">
+				<div class="member7">
+					<img class="memImg3"src="Assets/images/ishan.jpg">
+					<div class="reveal">
+						<p class="reveal-text"> Ishan Malhotra </p>
+						<p class="reveal-sub">Treasurer</p>
+						<hr class="reveal-hr">
+						<div class="social-btns">
+							<a href="#" class="btn facebook"><i class="fa fa-facebook"></i></a>
+							<a href="#" class="btn google"><i class="fa fa-google"></i></a>
+							<a href="#" class="btn linkedin-in"><i class="fa fa-linkedin-in"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="member8">
+					<img class="memImg4"src="Assets/images/viraj.jpg">
+					<div class="reveal">
+						<p class="reveal-text"> Viraj Kamra </p>
+						<p class="reveal-sub">Treasurer</p>
+						<hr class="reveal-hr">
+						<div class="social-btns">
+							<a href="#" class="btn facebook"><i class="fa fa-facebook"></i></a>
+							<a href="#" class="btn google"><i class="fa fa-google"></i></a>
+							<a href="#" class="btn linkedin-in"><i class="fa fa-linkedin-in"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="member9">
+					<img class="memImg5"src="Assets/images/therapist.jpg">
+					<div class="reveal">
+						<p class="reveal-text"> Aaryan Singla </p>
+						<p class="reveal-sub">Logistics Head</p>
+						<hr class="reveal-hr">
+						<div class="social-btns">
+							<a href="#" class="btn facebook"><i class="fa fa-facebook"></i></a>
+							<a href="#" class="btn google"><i class="fa fa-google"></i></a>
+							<a href="#" class="btn linkedin-in"><i class="fa fa-linkedin-in"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="content row5">
+				<div class="member7">
+					<img class="memImg3"src="Assets/images/suhani.jpg">
+					<div class="reveal">
+						<p class="reveal-text"> Suhani Garg </p>
+						<p class="reveal-sub">Logistics Head</p>
+						<hr class="reveal-hr">
+						<div class="social-btns">
+							<a href="#" class="btn facebook"><i class="fa fa-facebook"></i></a>
+							<a href="#" class="btn google"><i class="fa fa-google"></i></a>
+							<a href="#" class="btn linkedin-in"><i class="fa fa-linkedin-in"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="member8">
+					<img class="memImg4"src="Assets/images/khushi.jpg">
+					<div class="reveal">
+						<p class="reveal-text"> Khushi Mehra </p>
+						<p class="reveal-sub">Event-Day Head</p>
+						<hr class="reveal-hr">
+						<div class="social-btns">
+							<a href="#" class="btn facebook"><i class="fa fa-facebook"></i></a>
+							<a href="#" class="btn google"><i class="fa fa-google"></i></a>
+							<a href="#" class="btn linkedin-in"><i class="fa fa-linkedin-in"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="member9">
+					<img class="memImg5"src="Assets/images/parthc.jpg">
+					<div class="reveal">
+						<p class="reveal-text"> Paarth Chopra </p>
+						<p class="reveal-sub">Event-Day Head</p>
+						<hr class="reveal-hr">
+						<div class="social-btns">
+							<a href="#" class="btn facebook"><i class="fa fa-facebook"></i></a>
+							<a href="#" class="btn google"><i class="fa fa-google"></i></a>
+							<a href="#" class="btn linkedin-in"><i class="fa fa-linkedin-in"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="content row6">
+				<div class="member7">
+					<img class="memImg3"src="Assets/images/harleen.jpg">
+					<div class="reveal">
+						<p class="reveal-text"> Harleen Kaur </p>
+						<p class="reveal-sub">Volunteer Head</p>
+						<hr class="reveal-hr">
+						<div class="social-btns">
+							<a href="#" class="btn facebook"><i class="fa fa-facebook"></i></a>
+							<a href="#" class="btn google"><i class="fa fa-google"></i></a>
+							<a href="#" class="btn linkedin-in"><i class="fa fa-linkedin-in"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="member8">
+					<img class="memImg4"src="Assets/images/shreeum.jpg">
+					<div class="reveal">
+						<p class="reveal-text"> Shreeum Rakheja </p>
+						<p class="reveal-sub">Volunteer Head</p>
+						<hr class="reveal-hr">
+						<div class="social-btns">
+							<a href="#" class="btn facebook"><i class="fa fa-facebook"></i></a>
+							<a href="#" class="btn google"><i class="fa fa-google"></i></a>
+							<a href="#" class="btn linkedin-in"><i class="fa fa-linkedin-in"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>				
       <script src="Assets/js/typer.js"></script>
 			<script src="team_2.js"></script>
       <script type="text/javascript" src="Assets/js/particles.js"></script>
